# python-russificator

./: README.md  pyproject.toml  russificator.py
